# BlogAI

./: .gitignore  compose.yaml  fluxo-sistema.md
backend/: .env.example  Dockerfile  database.py  main.py  pyproject.toml
backend/config/: config.py
backend/routers/: posts.py
backend/services/: criarpost.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: PostCard.jsx
frontend/src/pages/: Admin.jsx  Home.jsx  Post.jsx
